--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -200,6 +200,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="../../utils/config/config.js"></script>
     <script src="chat.js"></script>
 </body>
 </html>
